run ScopedValueCacheTest in subprocess.